# wg-monitor

./: .gitignore  LICENSE  Makefile  README.md  check.bash  info.hotoku.wg-monitor.plist.jinja  pyproject.toml
plist/: .gitignore  Makefile  check.bash  check.py  check.zsh  info.hotoku.wg-monitor.conf.jinja
