[tool.poetry]
name = "wg-monitor"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wg_monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2-cli = "^0.8.2"
pyobjc-framework-quartz = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
